<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Camera</string>
    <string name="SAMR_APP_NAME">Camera</string>
    <string name="SAMR_SPINNER_INTERNAL_STORAGE">Internal storage</string>
    <string name="SAMR_SPINNER_SD_CARD">SD card</string>
    <string name="SAMR_SPINNER_EXTERNAL_CARD">External card</string>
    <string name="flash_mode">Flash</string>
    <string name="flash_off">OFF</string>
    <string name="flash_on">Fill flash</string>
    <string name="flash_auto">Auto</string>
    <string name="flash_red_eye">Red-eye reduction</string>
    <string name="resolution_mode">Resolution</string>
    <string name="resolution_16_9">16:9</string>
    <string name="resolution_4_3">4:3</string>
    <string name="storage_mode">Data storage</string>
    <string name="settings_dialog_title">SmallCamera Settings</string>
    <string name="saved_ok">Photo saved.</string>
    <string name="saved_fail">Cannot save photo.</string>
    <string name="zoom_enable">Enable the Zoom button.</string>
    <string name="effect_none">None</string>
    <string name="effect_mono">Monochrome</string>
    <string name="effect_sepia">Sepia</string>
    <string name="effect_negative">Negative</string>
    <string name="effect_posterize">Poster</string>
    <string name="app_not_start">Cannot start SmallCamera!</string>
    <string name="shutterSound_enable">Shutter sound</string>
    <string name="shutterSound_on">ON</string>
    <string name="shutterSound_off">OFF</string>
    <string name="focus">Focus mode</string>
    <string name="focus_auto">Auto</string>
    <string name="focus_infinity">Infinity</string>
    <string name="focus_macro">Macro</string>
    <string name="white_balance_auto">Auto</string>
    <string name="white_balance_incandescent">Incandescent</string>
    <string name="white_balance_fluorescent">Fluorescent</string>
    <string name="white_balance_daylight">Daylight</string>
    <string name="white_balance_cloudy_daylight">Cloudy</string>
    <string name="white_twilight">Twilight</string>
    <string name="white_shadow">Shadow</string>
    <string name="anti_banding_auto">Auto</string>
    <string name="anti_banding_50Hz">50Hz</string>
    <string name="anti_banding_60Hz">60Hz</string>
    <string name="anti_banding_off">OFF</string>
    <string name="scene_auto">Auto</string>
    <string name="scene_action">Sports</string>
    <string name="scene_portrait">Portrait</string>
    <string name="scene_landscape">Landscape</string>
    <string name="scene_night">Night</string>
    <string name="scene_night_portrait">Night-portrait</string>
    <string name="scene_beach">Beach</string>
    <string name="scene_snow">Show</string>
    <string name="scene_sunset">Sunset</string>
    <string name="scene_fireworks">Fireworks</string>
    <string name="scene_party">Party</string>
    <string name="whitebalance">White Balance</string>
    <string name="antibanding">AntiBanding</string>
    <string name="scene">Scene</string>
    <string name="filter">Color Effect</string>
    <string name="touch_enable">Enable touch events.</string>
    <string name="back_camera">Back Camera</string>
    <string name="front_camera">Front Camera</string>
    <string name="delete_title">Delete photo</string>
    <string name="delete_message">This photo will be deleted</string>
    <string name="back_video">Video camera</string>
    <string name="front_video">Front video</string>
    <string name="video_resolution_mode">Video size</string>
    <string name="video_resolution_1080p">Full HD</string>
    <string name="video_resolution_720p">HD 720p</string>
    <string name="video_resolution_480p">VGA</string>
    <string name="photo_light">Photo light</string>
    <string name="photo_light_on">On</string>
    <string name="photo_light_off">Off</string>
    <string name="microphone">Microphone</string>
    <string name="microphone_on">On</string>
    <string name="microphone_off">Off</string>
    <string name="shooting_end">Shooting is finished!</string>
    <string name="delete_title_video">Delete video</string>
    <string name="delete_message_video">This video will be deleted</string>
    <string name="back_silent">Silent</string>
    <string name="front_silent">Silent (Front)</string>
    <string name="camera_mode">Shooting mode</string>
    <string name="camera_id">Camera</string>
    <string name="camera_mode_camera">Camera</string>
    <string name="camera_mode_video">Video</string>
    <string name="camera_mode_silent">Silent</string>
    <string name="camera_mode_burst">Burst</string>
    <string name="camera_id_back">Back Camera</string>
    <string name="camera_id_front">Front Camera</string>
    <string name="video_resolution_QVGA">QVGA</string>
    <string name="freeResize">To freely change the screen size.</string>
    <string name="slide_duration">Slide duration</string>
</resources>
