<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dialog_background" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="24.0sp" android:textColor="@color/divider2" android:ellipsize="marquee" android:layout_gravity="center" android:id="@id/title" android:paddingLeft="23.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_dialog_title" android:singleLine="true" />
    <View android:id="@id/divider" android:background="@color/divider2" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" />
    <ScrollView android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="250.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:id="@id/linearCameraMode" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/menuText" android:ellipsize="marquee" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="8.0dip" android:text="@string/camera_mode" android:singleLine="true" android:layout_weight="1.0" />
                <Button android:gravity="center" android:id="@id/btnCameraMode" android:background="@drawable/dropdown_disabled_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/camera_mode_camera" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/linearCameraID" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/menuText" android:ellipsize="marquee" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="8.0dip" android:text="@string/camera_id" android:singleLine="true" android:layout_weight="1.0" />
                <Button android:gravity="center" android:id="@id/btnCameraID" android:background="@drawable/dropdown_disabled_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/camera_id_back" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/linearFlash" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/menuText" android:ellipsize="marquee" android:gravity="center_horizontal" android:id="@id/textFlashMode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="8.0dip" android:text="@string/flash_mode" android:singleLine="true" android:layout_weight="1.0" />
                <Button android:gravity="center" android:id="@id/btnFlashMode" android:background="@drawable/dropdown_disabled_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/flash_auto" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/linearResolution" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/menuText" android:ellipsize="marquee" android:gravity="center_horizontal" android:paddingLeft="11.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/resolution_mode" android:layout_weight="1.0" />
                <Button android:gravity="center" android:id="@id/btnResolution" android:background="@drawable/dropdown_disabled_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/resolution_16_9" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/linearVideoQuality" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/menuText" android:ellipsize="marquee" android:gravity="center_horizontal" android:paddingLeft="11.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/video_resolution_mode" android:layout_weight="1.0" />
                <Button android:gravity="center" android:id="@id/btnVideoQuality" android:background="@drawable/dropdown_disabled_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/video_resolution_480p" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/linearStorage" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/menuText" android:ellipsize="marquee" android:gravity="center_horizontal" android:paddingLeft="11.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/storage_mode" android:layout_weight="1.0" />
                <Button android:gravity="center" android:id="@id/btnStorage" android:background="@drawable/dropdown_disabled_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/SAMR_SPINNER_INTERNAL_STORAGE" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/linearFilter" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/menuText" android:ellipsize="marquee" android:gravity="center_horizontal" android:paddingLeft="11.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/filter" android:layout_weight="1.0" />
                <Button android:gravity="center" android:id="@id/btnFilter" android:background="@drawable/dropdown_disabled_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/SAMR_SPINNER_INTERNAL_STORAGE" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/linearFocus" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/menuText" android:ellipsize="marquee" android:gravity="center_horizontal" android:paddingLeft="11.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/focus" android:layout_weight="1.0" />
                <Button android:gravity="center" android:id="@id/btnFocus" android:background="@drawable/dropdown_disabled_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/SAMR_SPINNER_INTERNAL_STORAGE" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/linearMicrophone" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/menuText" android:ellipsize="marquee" android:gravity="center_horizontal" android:paddingLeft="11.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/microphone" android:layout_weight="1.0" />
                <Button android:gravity="center" android:id="@id/btnMicrophone" android:background="@drawable/dropdown_disabled_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/microphone_off" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/linearWhiteBalance" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/menuText" android:ellipsize="marquee" android:gravity="center_horizontal" android:paddingLeft="11.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/whitebalance" android:layout_weight="1.0" />
                <Button android:gravity="center" android:id="@id/btnWhiteBalance" android:background="@drawable/dropdown_disabled_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/SAMR_SPINNER_INTERNAL_STORAGE" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/linearAntiBanding" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/menuText" android:ellipsize="marquee" android:gravity="center_horizontal" android:paddingLeft="11.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/antibanding" android:layout_weight="1.0" />
                <Button android:gravity="center" android:id="@id/btnAntiBanding" android:background="@drawable/dropdown_disabled_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/SAMR_SPINNER_INTERNAL_STORAGE" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/linearScene" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/menuText" android:ellipsize="marquee" android:gravity="center_horizontal" android:paddingLeft="11.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/scene" android:layout_weight="1.0" />
                <Button android:gravity="center" android:id="@id/btnScene" android:background="@drawable/dropdown_disabled_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/SAMR_SPINNER_INTERNAL_STORAGE" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/linearShutterSound" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="0.0dip">
                <TextView android:textColor="@color/menuText" android:ellipsize="marquee" android:gravity="center_horizontal" android:paddingLeft="11.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/shutterSound_enable" android:layout_weight="1.0" />
                <Button android:gravity="center" android:id="@id/btnShutterSound" android:background="@drawable/dropdown_disabled_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/shutterSound_on" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
            </LinearLayout>
            <CheckBox android:gravity="center" android:id="@id/checkZoom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/zoom_enable" style="@android:style/Widget.Holo.Button.Borderless.Small" />
            <CheckBox android:gravity="center" android:id="@id/checkFreeResize" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/freeResize" style="@android:style/Widget.Holo.Button.Borderless.Small" />
            <CheckBox android:gravity="center" android:id="@id/checkTouch" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="@string/touch_enable" style="@android:style/Widget.Holo.Button.Borderless.Small" />
        </LinearLayout>
    </ScrollView>
    <View android:id="@id/divider" android:background="@color/divider" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btnCancel" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@android:string/cancel" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
        <View android:background="@color/divider" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <Button android:id="@id/btnOK" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@android:string/ok" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
    </LinearLayout>
</LinearLayout>